build_logs.txt
> Task :compileJava FAILED
C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\util\RaycastHelper.java:49: error: incompatible types: bad return type in lambda expression
                        e.getMessage()
                                    ^
    unexpected return value
Note: C:\Users\olik\Desktop\Hytale\Plugins\HytalePortal\src\main\java\dev\jsemolik\hytaleportal\listeners\PortalGunListener.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

